[tool.poetry]
name = "hls-get"
version = "0.1.0"
description = "An asynchronous terminal-based hls video stream (m3u8) downloader & combiner, with AES-128 decryption support."
authors = ["SoulMelody"]
license = "GPL-3.0"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Natural Language :: English",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
]
readme = "README.rst"

[tool.poetry.dependencies]
python = ">=3.6"
aiofiles = "*"
aiohttp = "*"
av = "*"
tenacity = "*"
click = "*"
m3u8 = "*"
pycryptodome = "*"
progress = "*"
yarl = "*"

[tool.poetry.dev-dependencies]
pytest = "*"
pytest-asyncio = "*"
pytest-aiohttp = "*"
pytest-runner = "*"

[tool.poetry.scripts]
hls-get = "hls_get.cli:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
